@@ -1199,6 +1199,8 @@ public interface CMMsg extends CMCommon
 	public static final int TYP_LEGALSTATE=135;
 	/** MINOR_MASK minor action code type, denoting a legal state change */
 	public static final int TYP_NEWROOM=136;
+	/** MINOR_MASK minor action code type, denoting causing a ship to sink */
+	public static final int TYP_CAUSESINK=137;
 
 	/** MINOR_MASK minor action code type, denoting a channel action -- 2000-2047 are channels*/
 	public static final int TYP_CHANNEL=2000; //(2000-2047 are channels)
@@ -1228,7 +1230,7 @@ public interface CMMsg extends CMCommon
 		"LASER","SONIC","REPAIR","ENHANCE","INSTALL","COLLISION","AROMA","DUELLOSS",
 		"COMMANDFAIL","METACOMMAND", "ITEMGENERATED", "ATTACKMISS", "WEATHER","ITEMSGENERATED",
 		"WROTE", "REWRITE", "WASREAD", "PREMOVE", "THINK", "STARTUP", "RPXPCHANGE",
-		"COMMANDREJECT","RECIPELEARNED", "GRAVITY", "LEGALSTATE", "NEWROOM"
+		"COMMANDREJECT","RECIPELEARNED", "GRAVITY", "LEGALSTATE", "NEWROOM","CAUSESINK"
 	};
 
 	/** Index string descriptions of all the MAJOR_MASK code MAKS_s */
@@ -1564,6 +1566,8 @@ public interface CMMsg extends CMCommon
 	public static final int MSG_LEGALSTATE=MASK_CNTRLMSG|TYP_LEGALSTATE;
 	/** combined MAJOR and MINOR codes for useful event message type for room being created*/
 	public static final int MSG_NEWROOM=MASK_CNTRLMSG|TYP_NEWROOM;
+	/** combined MAJOR and MINOR codes for useful event message type for a sinking ship */
+	public static final int MSG_CAUSESINK=MASK_SOUND|MASK_ALWAYS|TYP_CAUSESINK;
 
 	/**
 	 * An enum to use for an external message check from inside
